[package]
name = "multi-lsp-proxy"
version = "0.1.2"
edition = "2021"
description = "A LSP Proxy to multiple language servers"
license = "MIT"
repository = "https://github.com/messense/multi-lsp-proxy.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
toml_edit = { version = "0.17.1", features = ["easy", "serde"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
